@@ -26,6 +26,8 @@ The following bugs are resolved with this release:
   [25933] Off by one error in __strncmp_avx2
   [25966] Incorrect access of __x86_shared_non_temporal_threshold for x32
   [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
+  [26224] iconv hangs when converting some invalid inputs from several IBM
+    character sets (CVE-2020-27618)
   [26248] Incorrect argument types for INLINE_SETXID_SYSCALL
   [26332] Incorrect cache line size load causes memory corruption in memset
   [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
@@ -52,6 +54,9 @@ Security related changes:
   Dytrych of the Cisco Security Assessment and Penetration Team (See
   TALOS-2020-1019).
 
+  CVE-2020-27618: An infinite loop has been fixed in the iconv program when
+  invoked with input containing redundant shift sequences in the IBM1364,
+  IBM1371, IBM1388, IBM1390, or IBM1399 character sets.
 
 Version 2.31
 
